refactor: Java 25 modernization for engine health, instances, marshaller, integration, and utilities
- YEngineHealthIndicator/YReadinessHealthIndicator: pattern matching instanceof, var locals
- CaseInstance/InstanceCache/WorkItemInstance: stream operations, var, diamond operator
- Marshaller: switch expressions, var locals, lambda comparators
- YAWLException: streamlined constructors with Java 25 patterns
- MetricsCollector: var locals, stream toList()
- YawlResourceProvider/SpecificationsResource: switch expressions, pattern matching
- SpiffeWorkloadApiClient: var locals, lambda comparators
- MailService: var locals, stream operations
- YCondition (stateless): pattern matching instanceof
- CheckSummer: var locals, stream operations

https://claude.ai/code/session_01Q6XzCtWk7ibKmErheFYANF