@@ -529,7 +529,7 @@ public class YawlResourceProvider {
                 case '\t' -> sb.append("\\t");
                 default -> {
                     if (c < 0x20) {
-                        sb.append(String.format("\\u%04x", (int) c));
+                        sb.append("\\u%04x".formatted((int) c));
                     } else {
                         sb.append(c);
                     }
